# knit_script

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.rst  MANIFEST.in  README.md  installation_test.py  knitscript.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  dependencies.yml  deps.yml  docs.yml  release.yml  test-release.yml
KnitScript/: interpret.py
KnitScript/knit_graphs/: Knit_Graph.py  Loop.py  Yarn.py
KnitScript/knit_script_interpreter/: Knit_Script_Interpreter.py  header_structure.py  knit_script.pg  knit_script_actions.py  knit_script_context.py  knitout_to_dat.js  knitscript_pg_str.py  run_dat_compiler.py  variable_scope.py
KnitScript/knit_script_std_library/: needles.py
KnitScript/knitscript_console/: __main__.py  knitscript.py
KnitScript/knitting_machine/: Machine_State.py  knitout_instructions.py
Knit_Errors/: Knit_Script_Error.py  Knitout_Error.py  carrier_operation_errors.py  gauge_errors.py  knitting_errors.py  parse_errors.py  yarn_management_errors.py
_helper_functions/: enum_extension.py
docs/: knitscript_lexer.py
docs/source/: acknowledgments.rst  api.rst  conf.py  dependencies.rst  index.rst  installation.rst  knit_script.interpret_knit_script.rst  knit_script.knit_script_exceptions.Knit_Script_Exception.rst  knit_script.knit_script_exceptions.gauge_sheet_exceptions.rst  knit_script.knit_script_exceptions.knit_script_exception.rst  knit_script.knit_script_exceptions.ks_exceptions.rst  knit_script.knit_script_exceptions.parsing_exception.rst  knit_script.knit_script_exceptions.python_style_exceptions.rst  knit_script.knit_script_exceptions.rst  knit_script.knit_script_interpreter.Knit_Script_Interpreter.rst  knit_script.knit_script_interpreter.Knit_Script_Parser.rst  knit_script.knit_script_interpreter.Machine_Specification.rst  knit_script.knit_script_interpreter.expressions.Gauge_Expression.rst  knit_script.knit_script_interpreter.expressions.Indexed_Expression.rst  knit_script.knit_script_interpreter.expressions.accessors.rst  knit_script.knit_script_interpreter.expressions.carrier.rst  knit_script.knit_script_interpreter.expressions.direction.rst  knit_script.knit_script_interpreter.expressions.expressions.rst  knit_script.knit_script_interpreter.expressions.formatted_string.rst  knit_script.knit_script_interpreter.expressions.function_expressions.rst  knit_script.knit_script_interpreter.expressions.instruction_expression.rst  knit_script.knit_script_interpreter.expressions.list_expression.rst  knit_script.knit_script_interpreter.expressions.machine_accessor.rst  knit_script.knit_script_interpreter.expressions.needle_expression.rst  knit_script.knit_script_interpreter.expressions.needle_set_expression.rst  knit_script.knit_script_interpreter.expressions.not_expression.rst  knit_script.knit_script_interpreter.expressions.operator_expressions.rst  knit_script.knit_script_interpreter.expressions.rst  knit_script.knit_script_interpreter.expressions.values.rst  knit_script.knit_script_interpreter.expressions.variables.rst  knit_script.knit_script_interpreter.expressions.xfer_pass_racking.rst  knit_script.knit_script_interpreter.knit_script_actions.rst  knit_script.knit_script_interpreter.knit_script_context.rst  knit_script.knit_script_interpreter.ks_element.rst  knit_script.knit_script_interpreter.rst  (+40 more)
interpreter/: Knit_Script_Interpreter.py
interpreter/dat_compiler/: run_dat_compiler.py
interpreter/expressions/: Gauge_Expression.py  accessors.py  carrier.py  direction.py  expressions.py  formatted_string.py  function_expressions.py  instruction_expression.py  list_expression.py  machine_accessor.py  needle_expression.py  needle_set_expression.py  not_expression.py  operator_expressions.py  values.py  variables.py  xfer_pass_racking.py
interpreter/parser/: header_structure.py  knit_pass_actions.py  knit_pass_context.py  knit_script.pg  knit_script_actions.py  knit_script_context.py  variable_scope.py
interpreter/statements/: Assertion.py  Carriage_Pass.py  Drop_Pass.py  Print.py  Push_Statement.py  Statement.py  Variable_Declaration.py  With_Statement.py  assignment.py  branch_statements.py  carrier_statements.py  code_block_statements.py  control_loop_statements.py  function_dec_statement.py  header_statement.py  in_direction_statement.py  instruction_statements.py  return_statement.py  try_catch_statements.py  xfer_pass_statement.py
knit_graphs/: Knit_Graph.py  Loop.py  Yarn.py
knit_script/: interpret.py
knit_script/Knit_Errors/: Knit_Script_Error.py  carrier_operation_errors.py  gauge_errors.py  knitting_errors.py  parse_errors.py  yarn_management_errors.py
knit_script/knit_graphs/: Knit_Graph.py  Loop.py  Pull_Direction.py  Yarn.py  knit_graph_viz.py
knit_script/knit_script_interpreter/: Knit_Script_Interpreter.py  Knit_Script_Parser.py  compile_knitout.py  header_structure.py  knit_script.pg  ks_element.py  (+4 more)
knit_script_std_library/: needles.py
knitting_machine/: Machine_State.py  knitout_instructions.py
sebastian_samples/: 3D_spiral.ks  dictComp.py  icord.ks  rackNeedles.py  sort.py  sortPriority.py  test_ribbing.ks  test_sebastian_samples.py  test_seed.ks  test_trinity.ks  test_trinity_real_kpk.ks  tube.ks
tests/: Markov_Tree.py  Swatch_Knitter.ks  Swatch_Knitter.py  bag.ks  cast_on_mod.ks  clean_up_tests.py  knitjs.ks  knitout.py  lace.ks  lace_lamp.ks  python_sample.py  rib.ks  run_knitscript.py  test.ks  test_Assertion.py  test_Carriage_Pass_Specification.py  test_Carrier_Set.py  test_Import_Statement.py  test_Indexed_Expression.py  test_KS_code.ks  test_KnitScript.py  test_Knit_Script_Exception.py  test_Knit_Script_Parser.py  test_Knit_Script_Warning.py  test_Knitout_Interpreter.py  test_Knitout_Optimizer.py  test_Knitout_Topology_Graph.py  test_Sheet_Gauge_Handling.py  test_Swatch_Knitter.py  test_With_Statement.py  test_accessors.py  test_basic_examples.py  test_branch_statements.py  test_calibration.py  test_carrier.py  test_compile_knitout.py  test_container_expressions.py  test_control_loop_statements.py  test_demos.py  test_documentation_examples.py  (+25 more)
(+550 files in other folders)
